WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
117184
[WKTR][WTK] Undefined symbols in libTestRunnerInjectedBundle.so after
r151124
https://bugs.webkit.org/show_bug.cgi?id=117184
Summary
[WKTR][WTK] Undefined symbols in libTestRunnerInjectedBundle.so after r151124
Chris Dumez
Reported
2013-06-04 01:48:42 PDT
libTestRunnerInjectedBundle.so doesn't load after
r151124
for ports using ATK.
Attachments
Patch
(1.61 KB, patch)
2013-06-04 01:50 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2013-06-04 01:50:48 PDT
Created
attachment 203665
[details]
Patch
Gyuyoung Kim
Comment 2
2013-06-04 01:54:00 PDT
Comment on
attachment 203665
[details]
Patch r=me.
Chris Dumez
Comment 3
2013-06-04 01:55:16 PDT
Comment on
attachment 203665
[details]
Patch Clearing flags on attachment: 203665 Committed
r151161
: <
http://trac.webkit.org/changeset/151161
>
Chris Dumez
Comment 4
2013-06-04 01:55:22 PDT
All reviewed patches have been landed. Closing bug.
Chris Dumez
Comment 5
2013-06-04 03:40:14 PDT
***
Bug 117187
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug