[WKTR][WTK] Undefined symbols in libTestRunnerInjectedBundle.so after r151124 https://bugs.webkit.org/show_bug.cgi?id=117184

Reviewed by Gyuyoung Kim.

Add ATK stubs for mathPostscriptsDescription() and mathPrescriptsDescription() so
that we don't have undefined symbols in libTestRunnerInjectedBundle.so.

* WebKitTestRunner/InjectedBundle/atk/AccessibilityUIElementAtk.cpp:
(WTR::AccessibilityUIElement::mathPostscriptsDescription):
(WTR::AccessibilityUIElement::mathPrescriptsDescription):

Canonical link: https://commits.webkit.org/135444@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151161 268f45cc-cd09-0410-ab3c-d52691b4dbfc